Minor fixes
- Fixed padding causing text to be too close to a border in the projects page
- Minor writing fix

--- a/projects_page_styles.css
+++ b/projects_page_styles.css
@@ -60,6 +60,7 @@
 .divider {
     border-left: dotted 2px rgba(213, 23, 27, 0.9);
     padding-left: 12px;
+    padding-right: 12px;
     padding-top: 10px;
 }
 .centre-box{
